--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Grand Hotel</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/crown.png">
+    <link rel="stylesheet" href="https://github.com/Daxton47/grand-hotel/style.css">
+    <link rel="shortcut icon" href="https://github.com/Daxton47/grand-hotel/img/crown.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700"
@@ -229,7 +229,7 @@
         <div class="customers-card-wrapper">
             <div class="customer-card">
                 <div class="customer-image-wrapper">
-                    <img src="/img/customer-1.jpeg" alt="" class="customer-image">
+                    <img src="https://github.com/Daxton47/grand-hotel/img/customer-1.jpeg" alt="" class="customer-image">
                 </div>
                 <div class="customer-info">
                     <h3 class="customer-fullname">Helen Doe</h3>
@@ -242,7 +242,7 @@
 
             <div class="customer-card">
                 <div class="customer-image-wrapper">
-                    <img src="/img/customer-2.jpeg" alt="" class="customer-image">
+                    <img src="https://github.com/Daxton47/grand-hotel/img/customer-2.jpeg" alt="" class="customer-image">
                 </div>
                 <div class="customer-info">
                     <h3 class="customer-fullname">Monica Smith</h3>
@@ -327,22 +327,22 @@
                 <h3 class="footer-heading">Gallery</h3>
                 <div class="gallery-images">
                     <div class="image-wrapper">
-                        <img src="/img/gallery-img-1.jpeg" alt="" class="footer-image">
+                        <img src="https://github.com/Daxton47/grand-hotel/img/gallery-img-1.jpeg" alt="" class="footer-image">
                     </div>
                     <div class="image-wrapper">
-                        <img src="/img/gallery-img-2.jpeg" alt="" class="footer-image">
+                        <img src="https://github.com/Daxton47/grand-hotel/img/gallery-img-2.jpeg" alt="" class="footer-image">
                     </div>
                     <div class="image-wrapper">
-                        <img src="/img/gallery-img-3.jpeg" alt="" class="footer-image">
+                        <img src="https://github.com/Daxton47/grand-hotel/img/gallery-img-3.jpeg" alt="" class="footer-image">
                     </div>
                     <div class="image-wrapper">
-                        <img src="/img/gallery-img-4.jpeg" alt="" class="footer-image">
+                        <img src="https://github.com/Daxton47/grand-hotel/img/gallery-img-4.jpeg" alt="" class="footer-image">
                     </div>
                     <div class="image-wrapper">
-                        <img src="/img/gallery-img-5.jpeg" alt="" class="footer-image">
+                        <img src="https://github.com/Daxton47/grand-hotel/img/gallery-img-5.jpeg" alt="" class="footer-image">
                     </div>
                     <div class="image-wrapper">
-                        <img src="/img/gallery-img-6.jpeg" alt="" class="footer-image">
+                        <img src="https://github.com/Daxton47/grand-hotel/img/gallery-img-6.jpeg" alt="" class="footer-image">
                     </div>
                 </div>
             </div>
