--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <header class="header">
         <div class="brand">
             <div>
-                <img src="/img/crown.png" alt="" width="80">
+                <img src="img/crown.png" alt="" width="80">
             </div>
             <h3 class="hotel-heading">Grand Hotel</h3>
         </div>
@@ -122,10 +122,10 @@
         </div>
 
         <div class="about-us-images">
-            <img src="/img/about-us-img-1.jpeg" alt="" class="image image-1">
-            <img src="/img/about-us-img-2.jpeg" alt="" class="image image-2">
-            <img src="/img/about-us-img-3.jpeg" alt="" class="image image-3">
-            <img src="/img/about-us-img-4.jpeg" alt="" class="image image-4">
+            <img src="img/about-us-img-1.jpeg" alt="" class="image image-1">
+            <img src="img/about-us-img-2.jpeg" alt="" class="image image-2">
+            <img src="img/about-us-img-3.jpeg" alt="" class="image image-3">
+            <img src="img/about-us-img-4.jpeg" alt="" class="image image-4">
         </div>
     </section>
 
@@ -142,7 +142,7 @@
 
         <div class="rooms-cards-wrapper">
             <div class="room-card">
-                <img src="/img/single-room.jpeg" alt="" class="room-image">
+                <img src="img/single-room.jpeg" alt="" class="room-image">
                 <div class="room-card-content">
                     <h4 class="room-card-heading">
                         Single Room
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="room-card">
-                <img src="/img/double-room.jpeg" alt="" class="room-image">
+                <img src="img/double-room.jpeg" alt="" class="room-image">
                 <div class="room-card-content">
                     <h4 class="room-card-heading">
                         Double Room
@@ -174,7 +174,7 @@
                 </div>
             </div>
             <div class="room-card">
-                <img src="/img/lux.jpeg" alt="" class="room-image">
+                <img src="img/lux.jpeg" alt="" class="room-image">
                 <div class="room-card-content">
                     <h4 class="room-card-heading">
                         Lux
@@ -190,7 +190,7 @@
                 </div>
             </div>
             <div class="room-card">
-                <img src="/img/vip.jpeg" alt="" class="room-image">
+                <img src="img/vip.jpeg" alt="" class="room-image">
                 <div class="room-card-content">
                     <h4 class="room-card-heading">
                         VIP
